add initial pages

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Tower Simulator</title>
+  <title>ATC Simulator</title>
   <meta charset="UTF-8" />
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="description" content="">
